--- a/OsirisIOS/OsirisIOS/Base.lproj/Main.storyboard
+++ b/OsirisIOS/OsirisIOS/Base.lproj/Main.storyboard
@@ -88,6 +88,7 @@
                     </view>
                     <connections>
                         <segue destination="l0o-y7-k2x" kind="modal" identifier="display" id="bhp-BI-Ytf"/>
+                        <segue destination="E4T-RO-6v5" kind="modal" identifier="test" id="z66-1c-rHq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fCX-3b-mNZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -133,6 +134,46 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fng-5s-NCQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="924" y="131"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="VRL-0V-BL2">
+            <objects>
+                <viewController id="E4T-RO-6v5" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2Md-Ir-9vV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="e1S-kw-tNj">
+                                <rect key="frame" x="16" y="341" width="343" height="306"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <state key="normal" title="Tap to Continue">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="nextCharacter:" destination="l0o-y7-k2x" eventType="touchUpInside" id="JfH-iD-3Za"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="rtF-3s-G18">
+                                <rect key="frame" x="16" y="20" width="343" height="313"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.020130947230000001" blue="0.27246436480000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="repeatAudio:" destination="l0o-y7-k2x" eventType="touchUpInside" id="TyS-WD-ruw"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rOp-vM-mFt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="924" y="879"/>
         </scene>
     </scenes>
 </document>
